--- a/Sanka2.html
+++ b/Sanka2.html
@@ -9,45 +9,131 @@
 
 <script>
 window.onload = function() {
-/*    // ModaalのCSSを読み込む
-  const modaalCSS = document.createElement('link');
-  modaalCSS.rel = 'stylesheet';
-  modaalCSS.type = 'text/css';
-  modaalCSS.href = 'https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/css/modaal.min.css';
-  document.head.appendChild(modaalCSS);
-    // jQueryを読み込む
-  const jqueryScript = document.createElement('script');
-  jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.min.js';
-  jqueryScript.integrity = 'sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=';
-  jqueryScript.crossOrigin = 'anonymous';
-  document.head.appendChild(jqueryScript);
+            // 背景用のオーバーレイ要素を生成
+            var overlay = document.createElement('div');
+            overlay.id = 'overlay';
+            overlay.style.display = 'none'; // 最初は非表示
+            overlay.style.position = 'fixed';
+            overlay.style.top = '0';
+            overlay.style.left = '0';
+            overlay.style.width = '100%';
+            overlay.style.height = '100%';
+            overlay.style.backgroundColor = 'rgba(0, 0, 0, 0.7)'; // 半透明の黒背景
+            overlay.style.zIndex = '1';
+            document.body.appendChild(overlay);
 
-  // Modaalを読み込む
-  const modaalScript = document.createElement('script');
-  modaalScript.src = 'https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/js/modaal.min.js';
-  document.head.appendChild(modaalScript);
+            // テキストを表示するコンテナ要素を生成
+            var textContainer = document.createElement('div');
+            textContainer.id = 'text-container';
+            textContainer.style.display = 'none'; // 最初は非表示
+            textContainer.style.position = 'fixed';
+            textContainer.style.top = '50%';
+            textContainer.style.left = '50%';
+            textContainer.style.transform = 'translate(-50%, -50%)';
+            textContainer.style.textAlign = 'center';
+            textContainer.style.color = 'white';
+            textContainer.style.zIndex = '2';
 
-  // jQuery Cookieを読み込む
-  const jqueryCookieScript = document.createElement('script');
-  jqueryCookieScript.src = 'https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js';
-  document.head.appendChild(jqueryCookieScript);
-  
-    // Sale情報のセクションを作成して追加
-  const saleInfoSection = document.createElement('section');
-  saleInfoSection.id = 'info';
+            // テキストコンテンツを生成
+            var heading = document.createElement('h2');
+            heading.textContent = 'Welcome to My Page';
+            heading.classList.add('glowing-text'); // 光るテキストのクラスを追加
+            textContainer.appendChild(heading);
 
-  const heading = document.createElement('h2');
-  heading.textContent = 'Sale情報';
+            var paragraph = document.createElement('p');
+            paragraph.textContent = 'This is some introductory text.';
+            paragraph.classList.add('glowing-text'); // 光るテキストのクラスを追加
+            textContainer.appendChild(paragraph);
 
-  const paragraph = document.createElement('p');
-  paragraph.textContent = '11月1日～12月31日まで年末セールを開催！';
+            // OKボタンを生成してテキストコンテナに追加
+            var okButton = document.createElement('button');
+            okButton.textContent = 'OK';
+            okButton.style.display = 'flex';
+            okButton.style.justifyContent = 'center';
+            okButton.style.alignItems = 'center';
+            okButton.style.width = '250px';
+            okButton.style.margin = '0 auto';
+            okButton.style.padding = '.9em 2em';
+            okButton.style.border = 'none';
+            okButton.style.borderRadius = '25px';
+            okButton.style.backgroundColor = '#2589d0';
+            okButton.style.color = '#fff';
+            okButton.style.fontWeight = '600';
+            okButton.style.fontSize = '1em';
+            okButton.style.cursor = 'pointer';
+            okButton.style.transition = 'background-color 0.3s, transform 0.3s';
+            okButton.classList.add('button'); // ボタンにクラスを追加
+            okButton.onclick = function() {
+                // OKボタンがクリックされたときの処理
+                closeOverlay();
+            };
+            textContainer.appendChild(okButton);
 
-  saleInfoSection.appendChild(heading);
-  saleInfoSection.appendChild(paragraph);
+            document.body.appendChild(textContainer);
 
-  // コンテナ要素に追加する
-//  const container = document.getElementById('container');
-//  container.appendChild(saleInfoSection);
+            // スタイル要素を生成してボタンのホバー時のアニメーションを設定する
+            var style = document.createElement('style');
+            style.textContent = `
+        /* ボタンのスタイル */
+        .button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 250px;
+            margin: 0 auto;
+            padding: .9em 2em;
+            border: none;
+            border-radius: 25px;
+            background-color: #2589d0;
+            color: #fff;
+            font-weight: 600;
+            font-size: 1em;
+            cursor: pointer; /* ホバー時のカーソルをポインターにする */
+            transition: background-color 0.3s, transform 0.3s; /* ホバー時のトランジションを設定 */
+        }
+
+        .button:hover {
+            background-color: #1c6ea4; /* ホバー時の背景色 */
+            animation: anime-button-38 .3s linear infinite; /* ホバー時のアニメーションを適用 */
+        }
+
+        @keyframes anime-button-38 {
+            20% {
+                transform: translate(-2px, 2px);
+            }
+            40% {
+                transform: translate(-2px, -2px);
+            }
+            60% {
+                transform: translate(2px, 2px);
+            }
+            80% {
+                transform: translate(2px, -2px);
+            }
+        }
+
+        /* 光るテキストのスタイル */
+        .glowing-text {
+            color: #fff;
+            text-shadow: 0 0 10px #00f, 0 0 20px #0ff, 0 0 30px #0ff, 0 0 40px #0ff, 0 0 70px #0ff, 0 0 80px #0ff, 0 0 100px #0ff, 0 0 150px #0ff;
+        }
+            `;
+            document.head.appendChild(style);
+
+            // ページ読み込み後に背景を暗くしてテキストを表示する関数
+            function openModal() {
+                overlay.style.display = 'block';
+                textContainer.style.display = 'block';
+            }
+
+            // モーダルを閉じる関数
+            function closeOverlay() {
+                overlay.style.display = 'none';
+                textContainer.style.display = 'none';
+            }
+
+            // openModal関数を実行する例として、ページ読み込み時に実行する
+            openModal();
   */
   // コンテンツ領域のスタイルをJavaScriptで設定する
   const content = document.createElement('div');
